<resources>
    <string name="app_name">Chat Application</string>
    <string name="login">Login</string>
    <string name="login_description">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="register_description">Already have an account ?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="user_avatar">UserAvatar</string>
    <string name="sign_out">Sign out</string>
    <string name="message">Message</string>
    <string name="type_your_message">Type your message</string>
</resources>