<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textFontWeight="700"
        android:textSize="48sp"
        android:textColor="@color/text_primary"
    />
    <TextView
        android:id="@+id/view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/login_description"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:textColor="@color/primary" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_description"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="32dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_primary" />
    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_email"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textColor="@color/text_primary"
        android:autofillHints="password"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_password"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:enabled="false" />


</RelativeLayout>